--- a/src/Components/Form/Form.module.scss
+++ b/src/Components/Form/Form.module.scss
@@ -1,23 +1,19 @@
+@import "src/SCSS/mixins";
+
 .container {
   width: 100vw;
   height: 100vh;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
-  gap: 50px;
+  @include flex(column, center, center, 50px);
 
-  img {
+  .logo {
     width: 500px;
     left: 20px;
   }
 
   .formBox {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+    @include flex(column, "", center, 10px);
     width: 500px;
-    gap: 6px;
+
     & > :nth-child(n) {
       width: 100%;
     }
@@ -29,7 +25,7 @@
       border: none;
       width: 200px !important;
       height: 50px;
-      margin-top: 30px;
+      margin-top: 40px;
     }
   }
 }
